Enhance index.html with SEO meta tags
Added meta tags for SEO and updated title.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>AQUALEN STUDIO - 官方页面</title>
+<meta name="description" content="这里网站描述，不超过150字。">
+<meta name="keywords" content="游戏名, Unreal Engine, indie game, Web, etc">
+<link rel="canonical" href="https://aqualen.studio" />
+
   <meta charset="UTF-8" />
   <title>Aqualen Studio — Oceans, Ruins & Stories</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
