Modify hero subtitle in index.html
Updated the hero subtitle text in Chinese.

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
           a first-person open-world prototype with Unreal Engine and AI-assisted tools.
         </p>
         <p class="hero-subtitle-cn">
-          以潜水与海洋废墟为核心，结合 UE 与 AI，打造沉浸式独立游戏与世界观内容。
+          沉浸式独立游戏与世界观。
         </p>
 
         <div class="hero-buttons">
