Update image paths and assets references
Updated image paths and asset references in index.html, project-capy-strike.html, and project-inkighter.html to use new directory structure and filenames. This includes changes to logo, project images, and carousel images for improved organization and consistency.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="theme-color" content="#0b0d12" />
 
   <link rel="icon" href="/assets/favicon.png" />
-  <link rel="stylesheet" href="/assets/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Aqualen Studio — Silence Holds Power" />
   <meta property="og:description" content="Stylized indie games with eastern minimal aesthetics and sharp systems." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://aqualen.studio/" />
-  <meta property="og:image" content="https://aqualen.studio/assets/og-cover.jpg" />
+  <meta property="og:image" content="https://aqualen.studio/assets/img/og-cover.webp" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -74,13 +74,13 @@
         <div class="carousel" data-carousel>
           <div class="carousel-track" data-carousel-track>
             <div class="carousel-slide is-active">
-              <img src="/assets/hero/slide-1.webp" alt="Aqualen Studio — visual 1" loading="eager" decoding="async" />
+              <img src="/assets/img/hero-01.webp" alt="Aqualen Studio — visual 1" loading="eager" decoding="async" />
             </div>
             <div class="carousel-slide">
-              <img src="/assets/hero/slide-2.webp" alt="Aqualen Studio — visual 2" loading="lazy" decoding="async" />
+              <img src="/assets/img/hero-02.webp" alt="Aqualen Studio — visual 2" loading="lazy" decoding="async" />
             </div>
             <div class="carousel-slide">
-              <img src="/assets/hero/slide-3.webp" alt="Aqualen Studio — visual 3" loading="lazy" decoding="async" />
+              <img src="/assets/img/og-cover.webp" alt="Aqualen Studio — visual 3" loading="lazy" decoding="async" />
             </div>
           </div>
 
