--- a/project-capy-strike.html
+++ b/project-capy-strike.html
@@ -11,7 +11,7 @@
 <header>
   <div class="container nav">
     <a class="brand" href="/index.html">
-      <img src="/assets/img/logo-xuanwu.svg" alt="Aqualen Studio logo" width="34" height="34" />
+      <img src="/assets/img/logo-mark.webp" alt="Aqualen Studio logo" width="34" height="34" />
       <div><div class="t1">Aqualen Studio</div><div class="t2">Joytoart Gaming Ltd. · Cyprus (EU)</div></div>
     </a>
     <nav class="navlinks">
@@ -47,7 +47,7 @@
 
   <div class="grid3">
     <div class="card">
-      <div class="thumb"><img src="/assets/img/capy.webp" alt="Capy Strike screenshot 1" loading="lazy"></div>
+      <div class="thumb"><img src="/assets/img/project-capy-strike.webp" alt="Capy Strike screenshot 1" loading="lazy"></div>
     </div>
     <div class="card">
       <div class="thumb"><img src="/assets/img/hero-3.webp" alt="Capy Strike screenshot 2" loading="lazy"></div>
