--- a/project-inkighter.html
+++ b/project-inkighter.html
@@ -11,7 +11,7 @@
 <header>
   <div class="container nav">
     <a class="brand" href="/index.html">
-      <img src="/assets/img/logo-xuanwu.svg" alt="Aqualen Studio logo" width="34" height="34" />
+      <img src="/assets/img/logo-mark.webp" alt="Aqualen Studio logo" width="34" height="34" />
       <div><div class="t1">Aqualen Studio</div><div class="t2">Joytoart Gaming Ltd. · Cyprus (EU)</div></div>
     </a>
     <nav class="navlinks">
@@ -51,7 +51,7 @@
   <div class="spacer"></div>
 
   <div class="card">
-    <div class="thumb"><img src="/assets/img/inkighter.webp" alt="Inkighter screenshot" loading="lazy"></div>
+    <div class="thumb"><img src="/assets/img/project-inkighter.webp" alt="Inkighter screenshot" loading="lazy"></div>
   </div>
 
   <div class="hr"></div>
