--- a/index.html
+++ b/index.html
@@ -30,17 +30,11 @@
         <span class="brand-text">Aqualen Studio</span>
       </a>
 
-      <div class="nav-right">
-        <a class="nav-link" href="/projects.html" data-i18n="nav_projects">Projects</a>
-        <a class="nav-link" href="/news.html" data-i18n="nav_news">News</a>
-        <a class="nav-link" href="/about.html" data-i18n="nav_about">About</a>
-
         <!-- Language toggle -->
         <div class="lang" role="group" aria-label="Language">
           <button class="lang-btn" data-lang="en" type="button">EN</button>
           <button class="lang-btn" data-lang="ja" type="button">日本語</button>
         </div>
-      </div>
     </nav>
   </div>
 </header>
@@ -52,8 +46,7 @@
         <div class="kicker" data-i18n="hero_kicker">AQUALEN STUDIO</div>
         <h1 data-i18n="hero_title">Depth Over Noise</h1>
         <p class="muted" data-i18n="hero_desc">
-          An indie game &amp; under Joytoart Gaming Ltd. (Cyprus, EU).<br />
-          Eastern minimalism, mysterious worlds, sharp systems.
+          An indie game &amp; Eastern minimalism.
         </p>
 
         <div class="btns">
@@ -79,7 +72,13 @@
               <img src="/assets/img/hero-02.webp" alt="Aqualen Studio — visual 2" loading="lazy" decoding="async" />
             </div>
             <div class="carousel-slide">
-              <img src="/assets/img/og-cover.webp" alt="Aqualen Studio — visual 3" loading="lazy" decoding="async" />
+              <img src="/assets/img/hero-03.webp" alt="Aqualen Studio — visual 3" loading="lazy" decoding="async" />
+            </div>
+            <div class="carousel-slide">
+              <img src="/assets/img/hero-04.webp" alt="Aqualen Studio — visual 4" loading="lazy" decoding="async" />
+            </div>
+            <div class="carousel-slide">
+              <img src="/assets/img/hero-05.webp" alt="Aqualen Studio — visual 5" loading="lazy" decoding="async" />
             </div>
           </div>
 
@@ -110,12 +109,6 @@
         <p class="muted" data-i18n="featured_capy">
           Upcoming mobile title. Capybara chaos, clean systems.
         </p>
-      </a>
-
-      <a class="card pad hover" href="/press/index.html">
-        <div class="tag" data-i18n="press_tag">Press</div>
-        <h3 data-i18n="press_title">Press Kit</h3>
-        <p class="muted" data-i18n="press_desc">Logos, screenshots, factsheet, contact.</p>
       </a>
     </div>
   </section>
