--- a/post-2026-01-13.html
+++ b/post-2026-01-13.html
@@ -12,7 +12,7 @@
   <div class="container nav">
     <a class="brand" href="/index.html">
       <img src="/assets/img/logo-xuanwu.svg" alt="Aqualen Studio logo" width="34" height="34" />
-      <div><div class="t1">Aqualen Studio</div><div class="t2">Joytoart Gaming Ltd. · Cyprus (EU)</div></div>
+      <div><div class="t1">Aqualen Studio</div></div>
     </a>
     <nav class="navlinks">
       <a data-nav href="/index.html" data-i18n="nav_home">Home</a>
@@ -48,7 +48,6 @@
     <ul>
       <li>Replace placeholder images with final WebP.</li>
       <li>Add Steam/App Store links.</li>
-      <li>Publish Press Kit for partners and platform review.</li>
     </ul>
   </div>
 </main>
