--- a/project-capy-strike.html
+++ b/project-capy-strike.html
@@ -12,7 +12,7 @@
   <div class="container nav">
     <a class="brand" href="/index.html">
       <img src="/assets/img/logo-mark.webp" alt="Aqualen Studio logo" width="34" height="34" />
-      <div><div class="t1">Aqualen Studio</div><div class="t2">Joytoart Gaming Ltd. · Cyprus (EU)</div></div>
+      <div><div class="t1">Aqualen Studio</div></div>
     </a>
     <nav class="navlinks">
       <a data-nav href="/index.html" data-i18n="nav_home">Home</a>
@@ -34,12 +34,11 @@
     <div class="kicker">iOS · LAUNCHING SOON</div>
     <h1>Capy Strike</h1>
     <p class="muted prose">
-      A mobile title with short, satisfying sessions. (Replace this with your Apple review-friendly description.)
+      A mobile title with short, satisfying sessions.
     </p>
     <div class="btns">
       <a class="btn primary" href="#" target="_blank" rel="noopener">App Store</a>
       <a class="btn" href="#" target="_blank" rel="noopener">Trailer</a>
-      <a class="btn" href="/press/index.html">Press Kit</a>
     </div>
   </section>
 
@@ -50,10 +49,7 @@
       <div class="thumb"><img src="/assets/img/project-capy-strike.webp" alt="Capy Strike screenshot 1" loading="lazy"></div>
     </div>
     <div class="card">
-      <div class="thumb"><img src="/assets/img/hero-3.webp" alt="Capy Strike screenshot 2" loading="lazy"></div>
-    </div>
-    <div class="card">
-      <div class="thumb"><img src="/assets/img/hero-1.webp" alt="Capy Strike screenshot 3" loading="lazy"></div>
+      <div class="thumb"><img src="/assets/img/project-capy-strike-02.webp" alt="Capy Strike screenshot 2" loading="lazy"></div>
     </div>
   </div>
 
