--- a/project-inkighter.html
+++ b/project-inkighter.html
@@ -12,7 +12,7 @@
   <div class="container nav">
     <a class="brand" href="/index.html">
       <img src="/assets/img/logo-mark.webp" alt="Aqualen Studio logo" width="34" height="34" />
-      <div><div class="t1">Aqualen Studio</div><div class="t2">Joytoart Gaming Ltd. · Cyprus (EU)</div></div>
+      <div><div class="t1">Aqualen Studio</div></div>
     </a>
     <nav class="navlinks">
       <a data-nav href="/index.html" data-i18n="nav_home">Home</a>
@@ -34,8 +34,7 @@
     <div class="kicker">STEAM · PUBLISHED</div>
     <h1>Inkighter</h1>
     <p class="muted prose">
-      A stylized action experience forged from ink and resolve. (Replace this paragraph with your final store description.)
-    </p>
+      A stylized action experience forged from ink and resolve. 
     <div class="btns">
       <a class="btn primary"
    href="https://store.steampowered.com/app/1337930/"
@@ -43,8 +42,7 @@
    rel="noopener">
   Steam Store
 </a>
-      <a class="btn" href="#" target="_blank" rel="noopener">Trailer</a>
-      <a class="btn" href="/press/index.html">Press Kit</a>
+      <a class="btn" href="https://youtube.com/JokkS_4qgRA" target="_blank" rel="noopener">Trailer</a>
     </div>
   </section>
 
