--- a/devlog.html
+++ b/devlog.html
@@ -11,8 +11,8 @@
 <header>
   <div class="container nav">
     <a class="brand" href="/index.html">
-      <img src="/assets/img/logo-xuanwu.svg" alt="Aqualen Studio logo" width="34" height="34" />
-      <div><div class="t1">Aqualen Studio</div><div class="t2">Joytoart Gaming Ltd. · Cyprus (EU)</div></div>
+      <img src="/assets/img/logo-mark.webp" alt="Aqualen Studio logo" width="34" height="34" />
+      <div><div class="t1">Aqualen Studio</div></div>
     </a>
     <nav class="navlinks">
       <a data-nav href="/index.html" data-i18n="nav_home">Home</a>
