--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
   <div class="container nav">
     <a class="brand" href="/index.html">
       <img src="/assets/img/logo-xuanwu.svg" alt="Aqualen Studio logo" width="34" height="34" />
-      <div><div class="t1">Aqualen Studio</div><div class="t2">Joytoart Gaming Ltd. · Cyprus (EU)</div></div>
+      <div><div class="t1">Aqualen Studio</div></div>
     </a>
     <nav class="navlinks">
       <a data-nav href="/index.html" data-i18n="nav_home">Home</a>
@@ -33,7 +33,7 @@
   <section class="page-title">
     <div class="kicker">AQUALEN</div>
     <h1 data-i18n="nav_projects">Projects</h1>
-    <p class="muted">Each project has its own page for platform review (Apple) and press references.</p>
+    <p class="muted">Each project has its own page for platform review (Apple).</p>
   </section>
 
   <div class="spacer"></div>
@@ -68,10 +68,7 @@
   </div>
 
   <div class="hr"></div>
-  <div class="notice">
-    Replace links below with official store pages when ready:
-    Steam store URL, App Store URL, Nintendo developer / press contact references.
-  </div>
+  
 </main>
 
 <footer>
