--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Aqualen Studio — Silence Holds Power</title>
-  <meta name="description" content="Aqualen Studio is an independent game under Joytoart Gaming Ltd. (Cyprus, EU). Eastern minimalism, mysterious worlds, sharp systems." />
+  <meta name="description" content="Aqualen Studio is an independent game under Joytoart Gaming Ltd. (Cyprus, EU). Eastern minimalism, sharp systems." />
   <meta name="theme-color" content="#0b0d12" />
 
   <link rel="icon" href="/assets/favicon.png" />
@@ -42,7 +42,7 @@
 <main>
   <section class="hero">
     <div class="container hero-grid">
-      <div class="card pad">
+      <div class="card pad hero-copy">
         <div class="kicker" data-i18n="hero_kicker">AQUALEN STUDIO</div>
         <h1 data-i18n="hero_title">Depth Over Noise</h1>
         <p class="muted" data-i18n="hero_desc">
@@ -62,32 +62,32 @@
       </div>
 
       <!-- Carousel -->
-      <div class="card hero-media">
-        <div class="carousel" data-carousel>
-          <div class="carousel-track" data-carousel-track>
-            <div class="carousel-slide is-active">
-              <img src="/assets/img/hero-01.webp" alt="Aqualen Studio — visual 1" loading="eager" decoding="async" />
-            </div>
-            <div class="carousel-slide">
-              <img src="/assets/img/hero-02.webp" alt="Aqualen Studio — visual 2" loading="lazy" decoding="async" />
-            </div>
-            <div class="carousel-slide">
-              <img src="/assets/img/hero-03.webp" alt="Aqualen Studio — visual 3" loading="lazy" decoding="async" />
-            </div>
-            <div class="carousel-slide">
-              <img src="/assets/img/hero-04.webp" alt="Aqualen Studio — visual 4" loading="lazy" decoding="async" />
-            </div>
-            <div class="carousel-slide">
-              <img src="/assets/img/hero-05.webp" alt="Aqualen Studio — visual 5" loading="lazy" decoding="async" />
-            </div>
-          </div>
-
-          <button class="carousel-btn prev" type="button" aria-label="Previous slide" data-carousel-prev>‹</button>
-          <button class="carousel-btn next" type="button" aria-label="Next slide" data-carousel-next>›</button>
-
-          <div class="carousel-dots" aria-label="Slide dots" data-carousel-dots></div>
-        </div>
+<div class="card hero-media">
+  <div class="carousel" data-carousel tabindex="0">
+    <div class="track">
+      <div class="slide is-active">
+        <img src="/assets/img/hero-01.webp" alt="Aqualen Studio — visual 1" loading="eager" decoding="async" />
       </div>
+      <div class="slide">
+        <img src="/assets/img/hero-02.webp" alt="Aqualen Studio — visual 2" loading="lazy" decoding="async" />
+      </div>
+      <div class="slide">
+        <img src="/assets/img/hero-03.webp" alt="Aqualen Studio — visual 3" loading="lazy" decoding="async" />
+      </div>
+      <div class="slide">
+        <img src="/assets/img/hero-04.webp" alt="Aqualen Studio — visual 4" loading="lazy" decoding="async" />
+      </div>
+      <div class="slide">
+        <img src="/assets/img/hero-05.webp" alt="Aqualen Studio — visual 5" loading="lazy" decoding="async" />
+      </div>
+    </div>
+
+    <button class="carousel-btn prev" type="button" aria-label="Previous slide"></button>
+    <button class="carousel-btn next" type="button" aria-label="Next slide"></button>
+
+    <div class="dots" aria-label="Slide dots"></div>
+  </div>
+</div>
     </div>
   </section>
 
