Replace match-3 demo with rogue survivor demo
Removed match-3 demo files and assets, added new rogue survivor demo and related images and scripts. Updated navigation and branding in HTML files to reflect the new demo and logo. Various project pages updated to reference the new demo and assets.

--- a/devlog.html
+++ b/devlog.html
@@ -11,7 +11,7 @@
 <header>
   <div class="container nav">
     <a class="brand" href="/index.html">
-      <img src="/assets/img/logo-mark.webp" alt="Aqualen Studio logo" width="34" height="34" />
+      <img src="/assets/img/logo-512_512.webp" alt="Aqualen Studio logo" width="34" height="34" />
       <div><div class="t1">Aqualen Studio</div></div>
     </a>
     <nav class="navlinks">
@@ -20,7 +20,6 @@
       <a data-nav href="/devlog.html" data-i18n="nav_devlog">News / Devlog</a>
       <a data-nav href="/demo-match3.html" data-i18n="nav_demo">Web Demo</a>
       <a data-nav href="/about.html" data-i18n="nav_about">About</a>
-      <a data-nav href="/about.html#contact" data-i18n="nav_contact">Contact</a>
       <div class="lang" role="group" aria-label="Language">
         <button type="button" data-lang="en" aria-pressed="true">EN</button>
         <button type="button" data-lang="ja" aria-pressed="false">JA</button>
@@ -47,15 +46,11 @@
   </div>
 
   <div class="spacer"></div>
-
-  <div class="notice">
-    Pro tip: Keep post URLs stable. Apple reviewers love stable, clearly-labeled pages.
-  </div>
 </main>
 
 <footer>
   <div class="container" style="padding-top:24px">
-    <div class="muted small">Email: <a href="mailto:contact@aqualen.studio">contact@aqualen.studio</a></div>
+    <div class="muted small">Aqualen Studio · Joytoart Gaming Ltd. (Cyprus, EU)</div>
   </div>
 </footer>
 
