--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="description" content="Aqualen Studio is an independent game under Joytoart Gaming Ltd. (Cyprus, EU). Eastern minimalism, sharp systems." />
   <meta name="theme-color" content="#0b0d12" />
 
-  <link rel="icon" href="/assets/favicon.png" />
+  <link rel="icon" href="/assets/img/logo-512_512.webp" />
   <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Aqualen Studio — Silence Holds Power" />
-  <meta property="og:description" content="Stylized indie games with eastern minimal aesthetics and sharp systems." />
+  <meta property="og:description" content="Stylized indie games with eastern minimal aesthetics." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://aqualen.studio/" />
   <meta property="og:image" content="https://aqualen.studio/assets/img/og-cover.webp" />
@@ -51,8 +51,7 @@
 
         <div class="btns">
           <a class="btn primary" href="/projects.html" data-i18n="cta_primary">View Projects</a>
-          <a class="btn" href="/demo-match3.html" data-i18n="cta_secondary">Play Web Demo</a>
-          <a class="btn" href="/about.html#contact" data-i18n="cta_contact">Contact</a>
+          <a class="btn" href="/demo-rogue.html" data-i18n="cta_secondary">Play Web Demo</a>
         </div>
 
         <div class="spacer"></div>
@@ -153,6 +152,9 @@
       <a href="/about.html#contact" data-i18n="footer_contact">Contact</a>
       <a href="/privacy.html" data-i18n="footer_privacy">Privacy</a>
     </div>
+    <p>Official website of Aqualen Studio.Open-source projects available on
+     <a href="https://github.com/AqualenStudio" target="_blank" rel="noopener"><strong>GitHub</strong></a>.
+    </p>
   </div>
 </footer>
 
