--- a/post-2026-01-13.html
+++ b/post-2026-01-13.html
@@ -11,16 +11,15 @@
 <header>
   <div class="container nav">
     <a class="brand" href="/index.html">
-      <img src="/assets/img/logo-xuanwu.svg" alt="Aqualen Studio logo" width="34" height="34" />
+      <img src="/assets/img/logo-512_512.webp" alt="Aqualen Studio logo" width="34" height="34" />
       <div><div class="t1">Aqualen Studio</div></div>
     </a>
     <nav class="navlinks">
       <a data-nav href="/index.html" data-i18n="nav_home">Home</a>
       <a data-nav href="/projects.html" data-i18n="nav_projects">Projects</a>
       <a data-nav href="/devlog.html" data-i18n="nav_devlog">News / Devlog</a>
-      <a data-nav href="/demo-match3.html" data-i18n="nav_demo">Web Demo</a>
+      <a data-nav href="/demo-rogue.html" data-i18n="nav_demo">Play Demo</a>
       <a data-nav href="/about.html" data-i18n="nav_about">About</a>
-      <a data-nav href="/about.html#contact" data-i18n="nav_contact">Contact</a>
       <div class="lang" role="group" aria-label="Language">
         <button type="button" data-lang="en" aria-pressed="true">EN</button>
         <button type="button" data-lang="ja" aria-pressed="false">JA</button>
@@ -54,7 +53,7 @@
 
 <footer>
   <div class="container" style="padding-top:24px">
-    <div class="muted small"><a href="/devlog.html">← Back to Devlog</a></div>
+    <div class="muted small">Aqualen Studio · Joytoart Gaming Ltd. (Cyprus, EU)</div>
   </div>
 </footer>
 
