--- a/project-switch.html
+++ b/project-switch.html
@@ -11,16 +11,15 @@
 <header>
   <div class="container nav">
     <a class="brand" href="/index.html">
-      <img src="/assets/img/logo-xuanwu.svg" alt="Aqualen Studio logo" width="34" height="34" />
-      <div><div class="t1">Aqualen Studio</div><div class="t2">Joytoart Gaming Ltd. · Cyprus (EU)</div></div>
+      <img src="/assets/img/logo-512_512.webp" alt="Aqualen Studio logo" width="34" height="34" />
+      <div><div class="t1">Aqualen Studio</div></div>
     </a>
     <nav class="navlinks">
       <a data-nav href="/index.html" data-i18n="nav_home">Home</a>
       <a data-nav href="/projects.html" data-i18n="nav_projects">Projects</a>
       <a data-nav href="/devlog.html" data-i18n="nav_devlog">News / Devlog</a>
-      <a data-nav href="/demo-match3.html" data-i18n="nav_demo">Web Demo</a>
+      <a data-nav href="/demo-rogue.html" data-i18n="nav_demo">Play Demo</a>
       <a data-nav href="/about.html" data-i18n="nav_about">About</a>
-      <a data-nav href="/about.html#contact" data-i18n="nav_contact">Contact</a>
       <div class="lang" role="group" aria-label="Language">
         <button type="button" data-lang="en" aria-pressed="true">EN</button>
         <button type="button" data-lang="ja" aria-pressed="false">JA</button>
@@ -35,7 +34,6 @@
     <h1>Future Console Project</h1>
     <p class="muted prose">
       A long-arc project with Aqualen’s eastern-minimal aesthetic and mysterious worldbuilding.
-      (Keep this page high-level for now; it’s perfect for platform review / partner intro.)
     </p>
   </section>
 
