--- a/projects.html
+++ b/projects.html
@@ -11,16 +11,15 @@
 <header>
   <div class="container nav">
     <a class="brand" href="/index.html">
-      <img src="/assets/img/logo-xuanwu.svg" alt="Aqualen Studio logo" width="34" height="34" />
+      <img src="/assets/img/logo-512_512.webp" alt="Aqualen Studio logo" width="34" height="34" />
       <div><div class="t1">Aqualen Studio</div></div>
     </a>
     <nav class="navlinks">
       <a data-nav href="/index.html" data-i18n="nav_home">Home</a>
       <a data-nav href="/projects.html" data-i18n="nav_projects">Projects</a>
       <a data-nav href="/devlog.html" data-i18n="nav_devlog">News / Devlog</a>
-      <a data-nav href="/demo-match3.html" data-i18n="nav_demo">Web Demo</a>
+      <a data-nav href="/demo-rogue.html" data-i18n="nav_demo">Play Demo</a>
       <a data-nav href="/about.html" data-i18n="nav_about">About</a>
-      <a data-nav href="/about.html#contact" data-i18n="nav_contact">Contact</a>
       <div class="lang" role="group" aria-label="Language">
         <button type="button" data-lang="en" aria-pressed="true">EN</button>
         <button type="button" data-lang="ja" aria-pressed="false">JA</button>
@@ -33,14 +32,14 @@
   <section class="page-title">
     <div class="kicker">AQUALEN</div>
     <h1 data-i18n="nav_projects">Projects</h1>
-    <p class="muted">Each project has its own page for platform review (Apple).</p>
+    <p class="muted">Each project has its own page for platform review.</p>
   </section>
 
   <div class="spacer"></div>
 
   <div class="grid3">
     <a class="card project" href="/project-inkighter.html">
-      <div class="thumb"><img src="/assets/img/inkighter.webp" alt="Inkighter" loading="lazy"></div>
+      <div class="thumb"><img src="/assets/img/project-inkighter.webp" alt="Inkighter" loading="lazy"></div>
       <div class="meta">
         <div style="font-weight:700" data-i18n="p_inkighter_title">Inkighter (Steam)</div>
         <div class="muted small" data-i18n="p_inkighter_desc">Published. A stylized action experience forged from ink and resolve.</div>
@@ -49,7 +48,7 @@
     </a>
 
     <a class="card project" href="/project-capy-strike.html">
-      <div class="thumb"><img src="/assets/img/capy.webp" alt="Capy Strike" loading="lazy"></div>
+      <div class="thumb"><img src="/assets/img/project-capy-strike-02.webp" alt="Capy Strike" loading="lazy"></div>
       <div class="meta">
         <div style="font-weight:700" data-i18n="p_capy_title">Capy Strike (iOS)</div>
         <div class="muted small" data-i18n="p_capy_desc">Launching soon. Cute capy energy, fast sessions, clean UX.</div>
@@ -58,7 +57,7 @@
     </a>
 
     <a class="card project" href="/project-switch.html">
-      <div class="thumb"><img src="/assets/img/switch.webp" alt="Console" loading="lazy"></div>
+      <div class="thumb"><img src="/assets/img/about-ink-01.webp" alt="Console" loading="lazy"></div>
       <div class="meta">
         <div style="font-weight:700" data-i18n="p_switch_title">Future Console Title</div>
         <div class="muted small" data-i18n="p_switch_desc">A long-arc project heading toward Switch-class platforms.</div>
@@ -74,6 +73,9 @@
 <footer>
   <div class="container" style="padding-top:24px">
     <div class="muted small">Email: <a href="mailto:contact@aqualen.studio">contact@aqualen.studio</a></div>
+     <div class="container" style="padding-top:24px">
+      <div class="muted small">Aqualen Studio · Joytoart Gaming Ltd. (Cyprus, EU)</div>
+    </div>
   </div>
 </footer>
 
