Refine homepage, styles, and update project links
Updated homepage hero text and description for clarity. Improved CSS for carousel, grid, and featured sections, removing legacy and unused styles. Fixed trailer and Steam links in project-inkighter.html, updated devlog demo link, and made minor footer and script adjustments for consistency across pages.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#0b0d12" />
 
   <link rel="icon" href="/assets/img/logo-512_512.webp" />
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Aqualen Studio — Silence Holds Power" />
@@ -46,7 +46,8 @@
         <div class="kicker" data-i18n="hero_kicker">AQUALEN STUDIO</div>
         <h1 data-i18n="hero_title">Depth Over Noise</h1>
         <p class="muted" data-i18n="hero_desc">
-          An indie game &amp; Eastern minimalism.
+          An indie game &amp; 
+          Eastern minimalism.
         </p>
 
         <div class="btns">
@@ -152,15 +153,14 @@
       <a href="/about.html#contact" data-i18n="footer_contact">Contact</a>
       <a href="/privacy.html" data-i18n="footer_privacy">Privacy</a>
     </div>
-    <p>Official website of Aqualen Studio.Open-source projects available on
+    <p>Official website of Aqualen Studio. Open-source projects available on
      <a href="https://github.com/AqualenStudio" target="_blank" rel="noopener"><strong>GitHub</strong></a>.
     </p>
   </div>
 </footer>
 
 <!-- Existing scripts -->
-<script src="/assets/js/i18n.js" defer></script>
-<script src="/assets/js/main.js" defer></script>
+<script src="/assets/js/site.js" defer></script>
 <script src="/assets/js/carousel.js" defer></script>
 
 <!-- ================= TRAILER SCRIPT ================= -->
