--- a/project-inkighter.html
+++ b/project-inkighter.html
@@ -41,7 +41,7 @@
    rel="noopener">
   Steam Store
 </a>
-      <a class="btn" href="https://youtube.com/JokkS_4qgRA" target="_blank" rel="noopener">Trailer</a>
+      <a class="btn" href="https://www.youtube.com/watch?v=JokkS_4qgRA" target="_blank" rel="noopener">Trailer</a>
     </div>
   </section>
 
