--- a/devlog.html
+++ b/devlog.html
@@ -18,7 +18,7 @@
       <a data-nav href="/index.html" data-i18n="nav_home">Home</a>
       <a data-nav href="/projects.html" data-i18n="nav_projects">Projects</a>
       <a data-nav href="/devlog.html" data-i18n="nav_devlog">News / Devlog</a>
-      <a data-nav href="/demo-match3.html" data-i18n="nav_demo">Web Demo</a>
+      <a data-nav href="/demo-rogue.html" data-i18n="nav_demo">Web Demo</a>
       <a data-nav href="/about.html" data-i18n="nav_about">About</a>
       <div class="lang" role="group" aria-label="Language">
         <button type="button" data-lang="en" aria-pressed="true">EN</button>
