--- a/projects.html
+++ b/projects.html
@@ -73,9 +73,7 @@
 <footer>
   <div class="container" style="padding-top:24px">
     <div class="muted small">Email: <a href="mailto:contact@aqualen.studio">contact@aqualen.studio</a></div>
-     <div class="container" style="padding-top:24px">
-      <div class="muted small">Aqualen Studio · Joytoart Gaming Ltd. (Cyprus, EU)</div>
-    </div>
+    <div class="muted small" style="margin-top:8px">Aqualen Studio · Joytoart Gaming Ltd. (Cyprus, EU)</div>
   </div>
 </footer>
 
